// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ng add '@koobiq/components' should add missing dependencies to 'package.json': after running schematics 1`] = `
{
  "@angular/cdk": "^0.0.0",
  "@angular/common": "^20.3.0",
  "@angular/compiler": "^20.3.0",
  "@angular/core": "^20.3.0",
  "@angular/forms": "^20.3.0",
  "@angular/platform-browser": "^20.3.0",
  "@angular/router": "^20.3.0",
  "@koobiq/angular-luxon-adapter": "^0.0.0",
  "@koobiq/cdk": "^0.0.0",
  "@koobiq/date-adapter": "^0.0.0",
  "@koobiq/date-formatter": "^0.0.0",
  "@koobiq/design-tokens": "^0.0.0",
  "@koobiq/icons": "^0.0.0",
  "luxon": "^0.0.0",
  "rxjs": "~7.8.0",
  "tslib": "^2.3.0",
  "zone.js": "~0.15.0",
}
`;

exports[`ng add '@koobiq/components' should add missing dependencies to 'package.json': before running schematics 1`] = `
{
  "@angular/common": "^20.3.0",
  "@angular/compiler": "^20.3.0",
  "@angular/core": "^20.3.0",
  "@angular/forms": "^20.3.0",
  "@angular/platform-browser": "^20.3.0",
  "@angular/router": "^20.3.0",
  "rxjs": "~7.8.0",
  "tslib": "^2.3.0",
  "zone.js": "~0.15.0",
}
`;
